@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2024-10-21T01:19:21Z",
-  "count_outdated" : 4505,
-  "uniques_outdated" : 2255,
+  "timestamp" : "2024-10-21T12:34:06Z",
+  "count_outdated" : 4507,
+  "uniques_outdated" : 2257,
   "count" : 4521,
   "uniques" : 2271,
   "clones" : [
-    {
-      "timestamp": "2024-10-07T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 1, 2 ],
-      "count_decinc": [ 0, 2 ],
-      "uniques": 2,
-      "uniques_minmax": [ 1, 2 ],
-      "uniques_decinc": [ 0, 2 ]
-    },
     {
       "timestamp": "2024-10-09T00:00:00Z",
       "count": 1,
