@@ -1,12 +1,7 @@
 {
-  "count": 16,
-  "uniques": 13,
+  "count": 14,
+  "uniques": 12,
   "clones": [
-    {
-      "timestamp": "2024-10-07T00:00:00Z",
-      "count": 2,
-      "uniques": 2
-    },
     {
       "timestamp": "2024-10-09T00:00:00Z",
       "count": 1,
