@@ -1,3 +1,12 @@
+2024-10-21T12:34:06Z:
+* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/11440204178 # 601
+* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2024-10-21
+* notice: last 14d: unq all: 12 14
+* notice: prev accum: outdated-unq outdated-all / unq all: 2255 4505 / 2271 4521
+* notice: next accum: outdated-unq outdated-all / unq all: 2257 4507 / 2271 4521
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2024-10-07] / []
+
 2024-10-21T01:19:21Z:
 * notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/11431429676 # 600
 * notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2024-10-21
